# opengl-blackhole-2d-v2

./: .gitignore  InstallationLog.txt  README.md  build.bat  main.cpp  physics.cpp  physics.h  rendering.h  run.sh  start-step.sh
.githooks/: pre-push
steps/01a-cmake-setup/: CMakeLists.txt  main.cpp
steps/01b-window-creation/: main.cpp
steps/01c-render-loop/: main.cpp
steps/02a-coordinate-systems/: main.cpp
steps/02b-filled-shapes/: main.cpp
steps/02c-outlines-styling/: main.cpp
steps/02d-aspect-ratio/: main.cpp
steps/03-schwarzschild-basics/: main.cpp
steps/04-rk4-integration/: main.cpp
steps/05-ray-visualization/: main.cpp
steps/06-visual-enhancements/: CMakeLists.txt  main.cpp
steps/07a-geometric-units/: main.cpp
steps/07b-symplectic-integration/: main.cpp
steps/07c-adaptive-timestep/: main.cpp
steps/08-ray-variations/: main.cpp
steps/09-project-organization/: CMakeLists.txt  constants.h  main.cpp  physics.cpp  physics.h  ray.cpp  ray.h  rendering.cpp  rendering.h
